adding contact form

--- a/scss/base/_colors.scss
+++ b/scss/base/_colors.scss
@@ -16,8 +16,9 @@ $lightgreen                   : rgb(189, 247, 228);
 $darkblue                     : #2c3e50;
 $purple                       : rgba(109, 94, 168, 0.7);
 $pink                         : rgba(254, 90, 210, 0.6);
-$lightpink                    : rgba(248, 230, 230, 0.753);
+$lightpink                    : rgba(248, 230, 230, 0.9);
 $grey                         : #888;
+$lightgrey                    : #bdc3c7;
 $brown                        : #a52a2a;
 
 $dark                         : #000;
