--- a/scss/base/_reset.scss
+++ b/scss/base/_reset.scss
@@ -1,3 +1,5 @@
+@import "../helpers/mixins";
+
 body {
     font-family: "Roboto Mono", monospace;
     margin: 50px;
@@ -6,7 +8,7 @@ body {
   }
 
   .main {
-    display: grid;
-    grid-template-columns: 1fr 2fr;
+    @include grid('grid-template-columns', 'repeat(3, auto)');
     grid-gap: 30px;
   }
+  
