--- a/scss/helpers/_variables.scss
+++ b/scss/helpers/_variables.scss
@@ -5,9 +5,9 @@
  * - Breakpoints
  * - Paths
  * - Grid
- * - App-specific
+ * - Border-radius
+ * - Box Shadow
  */
-
 
 /**
  * Typography
@@ -18,73 +18,77 @@
  * the font-size mixin will convert to REMS
  */
 
- $font-size-title          : 60;
- $font-size-h2             : 48;
- $font-size-subtitle       : 24;
- $font-size-smalltitle     : 20;
- $font-size-base           : 18;
- $font-size-base-smaller   : 16;
+$font-size-title: 60px;
+$font-size-h2: 48px;
+$font-size-subtitle: 24px;
+$font-size-smalltitle: 20px;
+$font-size-base: 18px;
+$font-size-base-smaller: 16px;
+$font-size-small: 14px;
+$font-size-extra-small: 12px;
 
- 
- $letter-spacing           : 4px;
-  
- 
- $font-weight-light        : lighter;
- $font-weight-bold         : bolder;
 
- 
- // Font stacks
- $font-family-serif        : 'Roboto Slab', serif;
- $font-family-mono         : 'Roboto Mono', monospace;
- 
- $font-family-base         : $font-family-mono  ;
- $font-family-alt          : $font-family-serif;
- 
- 
- /**
+
+$letter-spacing: 4px;
+
+$font-weight-light: lighter;
+$font-weight-bold: bolder;
+
+// Font stacks
+$font-family-serif: "Roboto Slab", serif;
+$font-family-mono: "Roboto Mono", monospace;
+
+$font-family-base: $font-family-mono;
+$font-family-alt: $font-family-serif;
+
+/**
   * Breakpoints
   * =================================
   */
- $breakpoints: (
-     narrow                  : 400px,
-     mid                     : 750px,
-     wide                    : 1000px,
-     huge                    : 1250px
- );
- 
- /**
+$breakpoints: (
+  narrow: 400px,
+  mid: 750px,
+  wide: 1000px,
+  huge: 1250px,
+);
+
+/**
   * Grid
   * =================================
   * These variables will control the grid module.
   *
   */
+ $grids: 3;
+ $gutters: 1em;
  
- $grid-column-txt-content  : 2 / 3 ; 
- $grid-template            : 1fr 2fr; 
- 
- //Settings here override & affect the grid classes output
- $responsive-grid-sizes    : true; // Disable this if you don't want grid sizes for each breakpoint
- $use-legacy-grid          : true; // Disable this is you on’t want to output .no-flexbox classes for older browsers to use
- 
- 
- /**
+
+//Settings here override & affect the grid classes output
+$responsive-grid-sizes: true; // Disable this if you don't want grid sizes for each breakpoint
+$use-legacy-grid: true; // Disable this is you on’t want to output .no-flexbox classes for older browsers to use
+
+/**
   * Path variables
   * =================================
   */
- $img-path                 : "assets/profile.jpg"; // Usage: background: url('#{$img-path}/img.jpg') 0 0 no-repeat;
- 
-  /**
+$img-path: "assets/profile.jpg"; // Usage: background: url('#{$img-path}/img.jpg') 0 0 no-repeat;
+
+/**
   * Border-radius
   * =================================
   */
 
-  $border-skill-tab                : 5rem;
-  $border-wrap                     : 30px;
-  $border-progress                 : 50px 5px 5px 50px;
-  $border-rond                     : 50%;
-  $border-exp                      : 5px;
-  $border-exp-modal-img            : 5px;
-  $border-exp-modal-content        : 10px;
+$border-skill-tab: 5rem;
+$border-wrap: 30px;
+$border-progress: 50px 5px 5px 50px;
+$border-rond: 50%;
+$border-exp: 5px;
+$border-exp-modal-img: 5px;
+$border-exp-modal-content: 10px;
 
- 
- 
+/**
+  * Box-shadow
+  * =================================
+  */
+
+  $box-shadow: inset 0 10px 0 rgba(255, 255, 255, 0.2),
+  inset 0 2px 2px rgba(0, 0, 0, 0.125)
