--- a/scss/pages/_skills.scss
+++ b/scss/pages/_skills.scss
@@ -5,188 +5,186 @@
 
 .skills {
   grid-column: 2 / 3;
-  background-color: black;
+  background-color: $dark;
   padding: 40px 70px 40px 70px;
 }
 
 .wrapper {
-	max-width: 50rem;
-	width: 100%;
-	margin: 0 auto;
+  max-width: 50rem;
+  width: 100%;
+  margin: 0 auto;
 }
-.skills {
-	h2 {
-		font-family: "Roboto Slab", serif;
-		font-weight: lighter;
-		color: #29f3c3;
-	}
-}
+
 .tabs {
-	position: relative;
-	margin: 3rem 0;
-	background: #29f3c3;
-	box-shadow: inset 0 10px 0 rgba(255, 255, 255, 0.2), inset 0 2px 2px rgba(0, 0, 0, 0.125);
-	height: 14.75rem;
-	&::before {
-		content: "";
-		display: table;
-	}
-	&::after {
-		content: "";
-		display: table;
-	}
+  position: relative;
+  margin: 3rem 0;
+  background: $green;
+  box-shadow: $box-shadow;
+  height: 14.75rem;
+
+  &::before {
+    content: "";
+    display: table;
+  }
+
+  &::after {
+    content: "";
+    display: table;
+  }
 }
+
 .tab {
-	float: left;
+  float: left;
 }
+
 .tab-switch {
-	display: none;
-	&:checked {
-		+ {
-			.tab-label {
-				background: #ebebeb;
-				color: #2c3e50;
-				border-bottom: 0;
-				border-right: 0.125rem solid #ebebeb;
-				transition: all 0.35s;
-				z-index: 1;
-				top: -0.0625rem;
-			}
-			label {
-				+ {
-					.tab-content {
-						z-index: 2;
-						opacity: 1;
-						transition: all 0.35s;
-					}
-				}
-			}
-		}
-	}
+  display: none;
+  &:checked {
+    + {
+      .tab-label {
+        background: $bright;
+        color: $darkblue;
+        border-bottom: 0;
+        border-right: 0.125rem solid $bright;
+        transition: all 0.35s;
+        z-index: 1;
+        top: -0.0625rem;
+      }
+
+      label {
+        + {
+          .tab-content {
+            z-index: 2;
+            opacity: 1;
+            transition: all 0.35s;
+          }
+        }
+      }
+    }
+  }
 }
+
 .tab-label {
-	position: relative;
-	display: block;
-	line-height: 2.75em;
-	height: 3em;
-	padding: 0 1.618em;
-	background: #29f3c3;
-	box-shadow: inset 0 10px 0 rgba(255, 255, 255, 0.2), inset 0 2px 2px rgba(0, 0, 0, 0.125);
-	border-right: 0.125rem solid #16a085;
-	color: black;
-	cursor: pointer;
-	top: 0;
-	transition: all 0.25s;
-	&:hover {
-		top: -0.25rem;
-		transition: top 0.25s;
-	}
+  position: relative;
+  display: block;
+  line-height: 2.75em;
+  height: 3em;
+  padding: 0 1.618em;
+  background: $green;
+  box-shadow: $box-shadow;
+  border-right: 0.125rem solid $border-tab-color;
+  color: $dark;
+  cursor: pointer;
+  top: 0;
+  transition: all 0.25s;
+
+  &:hover {
+    top: -0.25rem;
+    transition: top 0.25s;
+  }
 }
+
 .tab-content {
-	position: absolute;
-	z-index: 1;
-	top: 2.75em;
-	left: 0;
-	padding: 40px 80px;
-	background: #ebebeb;
-	color: #2c3e50;
-	border-bottom: 0.25rem solid #bdc3c7;
-	opacity: 0;
-	transition: all 0.35s;
+  position: absolute;
+  z-index: 1;
+  top: 2.75em;
+  left: 0;
+  padding: 40px 80px;
+  background: $bright;
+  color: $darkblue;
+  border-bottom: 0.25rem solid $lightgrey;
+  opacity: 0;
+  transition: all 0.35s;
+  width: auto;
 }
+
 .tab-pane {
-	display: flex;
-	flex-direction: row;
-	flex-wrap: wrap;
-	justify-content: center;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
 }
+
 .skill-tab {
-	width: fit-content;
-	padding: 6px 15px 6px 15px;
-	margin-bottom: 7px;
-	margin-right: 7px;
-	background-color: rgb(189, 247, 228);
-	box-shadow: inset 0 10px 0 rgba(255, 255, 255, 0.2), inset 0 2px 2px rgba(0, 0, 0, 0.125);
-	color: black;
-	border-radius: 5rem;
-	display: flex;
-	flex-direction: column;
-	align-items: center;
+  width: fit-content;
+  padding: 6px 15px 6px 15px;
+  margin-bottom: 7px;
+  margin-right: 7px;
+  background-color: $lightgreen;
+  box-shadow: $box-shadow;
+  color: $color-highlight;
+  border-radius: 5rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
+
 .logo-n {
-	visibility: hidden;
-	&:hover {
-		visibility: initial;
-	}
+  visibility: hidden;
+
+  &:hover {
+    visibility: initial;
+  }
 }
+
 .skills-tab {
-	i {
-		width: 50px;
-	}
-	img {
-		height: 40px;
-	}
+  i {
+    width: 50px;
+  }
+  img {
+    height: 40px;
+  }
 }
+
 .wrap {
-	width: 500px;
-	background: #ebebeb;
-	padding: 0px;
-	border-radius: 30px;
-	margin: 20px auto;
-	box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.25), inset 0 0 5px rgba(0, 0, 0, 0.3), 0 2px 2px rgba(256, 256, 256, 0.45), inset 0 10px 20px rgba(0, 0, 0, 0.15);
-	position: relative;
+  width: 500px;
+  background: $bright;
+  padding: 0px;
+  border-radius: 30px;
+  margin: 20px auto;
+  box-shadow: $box-shadow;
+  position: relative;
 }
+
 .progress-bar {
-	display: flex;
-	flex-direction: row;
+  display: flex;
+  flex-direction: row;
 }
+
 .progress {
-	width: 81%;
-	height: 25px;
-	border-radius: 50px 5px 5px 50px;
-	background-color: rgb(189, 247, 228);
-	position: relative;
-	box-shadow: inset 0 10px 0 rgba(255, 255, 255, 0.2), inset 0 2px 2px rgba(0, 0, 0, 0.125);
-	cursor: pointer;
-	margin: 0 0px;
-	span {
-		font-size: 14px;
-		padding-left: 20px;
-	}
+  width: 81%;
+  height: 25px;
+  border-radius: 50px 5px 5px 50px;
+  background-color: $lightgreen;
+  position: relative;
+  box-shadow: $box-shadow;
+  cursor: pointer;
+  margin: 0 0px;
 }
+
 .progress_2 {
-	width: 68%;
-	height: 25px;
-	border-radius: 50px 5px 5px 50px;
-	position: relative;
-	background-color: rgb(189, 247, 228);
-	box-shadow: inset 0 10px 0 rgba(255, 255, 255, 0.2), inset 0 2px 2px rgba(0, 0, 0, 0.125);
-	cursor: pointer;
-	margin: 0 0px;
-	span {
-		font-size: 14px;
-		padding-left: 20px;
-	}
+  width: 68%;
+  height: 25px;
+  border-radius: 50px 5px 5px 50px;
+  position: relative;
+  background-color: $lightgreen;
+  box-shadow: $box-shadow;
+  cursor: pointer;
+  margin: 0 0px;
 }
+
 .progress_3 {
-	width: 74%;
-	height: 25px;
-	border-radius: 50px 5px 5px 50px;
-	background-color: rgb(189, 247, 228);
-	position: relative;
-	box-shadow: inset 0 10px 0 rgba(255, 255, 255, 0.2), inset 0 2px 2px rgba(0, 0, 0, 0.125);
-	cursor: pointer;
-	margin: 0 0px;
-	span {
-		font-size: 14px;
-		padding-left: 20px;
-	}
+  width: 74%;
+  height: 25px;
+  border-radius: 50px 5px 5px 50px;
+  background-color: $lightgreen;
+  position: relative;
+  box-shadow: $box-shadow;
+  cursor: pointer;
+  margin: 0 0px;
 }
+
 .percentage {
-	margin-top: 20px;
-	margin-left: 45px;
-}
-.progress-subtitle {
-	color: #000;
-	font-size: 12px;
+  margin-top: 20px;
+  margin-left: 40px;
 }
