--- a/scss/base/_reset.scss
+++ b/scss/base/_reset.scss
@@ -1,14 +1,22 @@
 @import "../helpers/mixins";
 
 body {
-    font-family: "Roboto Mono", monospace;
-    margin: 50px;
-    padding: 0;
+  font-family: "Roboto Mono", monospace;
+  margin: 0 50px;
+  padding: 0;
+  background-color: $dark;
+  @include media("narrow") {
+    
+  }
+}
+
+.main {
+  @include grid("grid-template-columns", "repeat(3, auto)");
+  grid-gap: 30px;
+  background-color: $dark;
+
+  @include media("narrow") {
+    display: block;
     background-color: $dark;
   }
-
-  .main {
-    @include grid('grid-template-columns', 'repeat(3, auto)');
-    grid-gap: 30px;
-  }
-  
+}
