--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -10,12 +10,15 @@
   justify-content: space-between;
   align-items: center;
   height: 70px;
-  position: fixed;
+  position: sticky;
   top: 0;
   left: 0;
   background-color: $dark;
-  z-index: 100;
+  z-index: 1000;
   width: 100%;
+  @include media("narrow") {
+    width: 580px;
+  }
 
   .navbar-collapse {
     flex-grow: 0;
@@ -88,6 +91,11 @@
   background-color: $dark;
   transition: all 0.5s ease-in-out;
 
+  @include media("narrow") {
+    display: flex;
+    flex-direction: row;
+  }
+
   ul {
     list-style-type: none;
   }
@@ -107,7 +115,9 @@
 
 .menu-active {
   right: 0px !important;
+
 }
+
 
 /* profile photo section with contact icons */
 
@@ -122,6 +132,10 @@
   img {
     height: 90vh;
     position: sticky;
+
+    @include media("narrow") {
+      display: none;
+    }
   }
 }
 
@@ -140,6 +154,12 @@
   grid-column: 2 / 3;
   background-color: $dark;
   padding: 200px 70px 100px 70px;
+
+  @include media("narrow") {
+    display: block;
+    width: 600px;
+    padding: 0;
+  }
 }
 
 .chevron-down {
