--- a/scss/pages/_contact.scss
+++ b/scss/pages/_contact.scss
@@ -6,11 +6,16 @@
 /* Contact */
 /* Animation Contact */
 
-.contact {
+.contacts {
   grid-column: 2 / 3;
   background-color: $dark;
   padding: 40px 70px 40px 70px;
-  height: 500px;
+
+  @include media("narrow") {
+    display: block;
+    width: 500px;
+    padding: 150px 0 0 0;
+  }
 }
 
 .contacts {
@@ -21,6 +26,7 @@
 .container-form {
   width: 100%;
 }
+
 .form-groupe {
   position: relative;
   display: flex;
@@ -30,7 +36,7 @@
     top: 70%;
     left: 0;
     transform: translateY(-50%);
-    color: #aaa;
+    color: $lightgrey;
     font-size: 16px;
     transition: 0.4s ease-out;
   }
@@ -41,8 +47,8 @@
     border: none;
     outline: none;
     background: none;
-    border-bottom: 1px solid #aaa;
-    color: #666;
+    border-bottom: 1px solid $lightgrey;
+    color: $lightgrey;
     font-size: 16px;
     transition: 0.4s ease-out;
   }
@@ -54,17 +60,17 @@
     display: block;
     width: auto;
     padding: 15px 40px;
-	border: 3px solid #aaa;
+    border: 3px solid $lightgrey;
     border-radius: 5px;
-	background: $lightgrey ;
+    background: $lightgrey;
     background-size: 200%;
-    color: #333;
+    color: $dark;
     font-size: 18px;
     font-weight: 500;
     cursor: pointer;
     &:hover {
       background-position: 100%;
-      border: 3px solid  $green;
+      border: 3px solid $green;
     }
   }
   &:focus-within {
@@ -77,20 +83,20 @@
 textarea {
   width: 100%;
   height: 200px;
-  border: 3px solid #aaa;
+  border: 3px solid $lightgrey;
   border-radius: 3px;
   padding: 5px;
   resize: none;
   outline: none;
   font-size: 20px;
   transition: 0.4s all ease-out;
-  background: $lightgrey ;
+  background: $lightgrey;
   &::placeholder {
     font-size: 20px;
     opacity: 0.5;
   }
   &:focus {
-	background: $bright;
+    background: $bright;
     border-color: $green;
   }
 }
