--- a/public/style.css
+++ b/public/style.css
@@ -194,7 +194,7 @@ h2 {
   font-size: 48px;
   font-family: "Roboto Slab", serif;
   font-weight: lighter;
-  color: #29f3C3;
+  color: #29f3c3;
   opacity: 0.8;
 }
 h2:hover {
@@ -202,7 +202,7 @@ h2:hover {
 }
 
 .about p {
-  color: #29f3C3;
+  color: #29f3c3;
   font-weight: light;
   font-size: 18px;
 }
@@ -415,7 +415,7 @@ body {
 }
 .profile-link a {
   text-decoration: none;
-  color: #29f3C3;
+  color: #29f3c3;
   font-size: large;
   justify-content: center;
 }
@@ -424,7 +424,7 @@ body {
   gap: 40px;
 }
 .socials i {
-  color: #29f3C3;
+  color: #29f3c3;
   padding-top: 50px;
   font-size: 40px;
   opacity: 0.8;
@@ -642,7 +642,7 @@ body {
   }
 }
 .footer-distributed .footer-left p {
-  color: #29f3C3;
+  color: #29f3c3;
   font-size: 14px;
   margin: 0;
   letter-spacing: 3px;
@@ -860,7 +860,7 @@ body {
 }
 
 .navbar-brand {
-  color: #29f3C3;
+  color: #29f3c3;
   text-decoration: none;
   font-weight: 700;
   letter-spacing: 3px;
@@ -879,7 +879,7 @@ body {
   margin-bottom: 6px;
   margin-right: 10px;
   transition: all 0.3s linear;
-  background-color: #29f3C3;
+  background-color: #29f3c3;
   width: 17px;
   opacity: 0.8;
   position: relative;
@@ -928,7 +928,7 @@ body {
   list-style-type: none;
 }
 .slide-menu a {
-  color: #29f3C3;
+  color: #29f3c3;
   font-weight: bolder;
   text-decoration: none;
   list-style: none;
@@ -986,7 +986,7 @@ body {
 }
 
 .chevron-down i {
-  color: #29f3C3;
+  color: #29f3c3;
   opacity: 0.7;
   font-size: 60px;
   position: absolute;
@@ -995,6 +995,14 @@ body {
   animation-iteration-count: infinite;
   animation-direction: alternate;
 }
+
+@media only screen and (max-width: 500px)
+  {
+    .chevron-down i{
+        top: 75%;
+        left: 100%;
+    }
+  }
 
 @keyframes fleshdown {
   from {
@@ -1335,7 +1343,7 @@ body {
 }
 .form-groupe .button-sub:hover {
   background-position: 100%;
-  border: 3px solid #29f3C3;
+  border: 3px solid #29f3c3;
 }
 .form-groupe:focus-within label {
   top: 0px;
@@ -1360,7 +1368,7 @@ textarea::placeholder {
 }
 textarea:focus {
   background: #ebebeb;
-  border-color: #29f3C3;
+  border-color: #29f3c3;
 }
 
 .form-groupe.animation label {
@@ -1518,7 +1526,7 @@ body {
   width: 1px;
   top: 100px;
   margin: 30px auto 0;
-  background: #29f3C3;
+  background: #29f3c3;
 }
 @media only screen and (max-width: 500px) {
   .ligne {
@@ -1531,7 +1539,7 @@ body {
   width: 20px;
   height: 20px;
   border-radius: 50%;
-  background: #29f3C3;
+  background: #29f3c3;
   position: absolute;
   border: 1px solid #000;
   left: 50%;
@@ -1572,7 +1580,7 @@ body {
 .exp {
   width: 200px;
   height: auto;
-  border: 0.5px solid #29f3C3;
+  border: 0.5px solid #29f3c3;
   border-radius: 5px;
 }
 
@@ -1600,7 +1608,7 @@ body {
   display: flex;
   justify-content: center;
   text-align: center;
-  color: #29f3C3;
+  color: #29f3c3;
   text-decoration: none;
   margin-top: 10px;
 }
@@ -1727,7 +1735,7 @@ to {
 }
 
 .exp-close {
-  color: #29f3C3;
+  color: #29f3c3;
   font-size: 24px;
   font-weight: bold;
   display: flex;
@@ -1747,7 +1755,7 @@ to {
 .exp-modal-header {
   padding: 8px 16px;
   background-color: #000;
-  color: #29f3C3;
+  color: #29f3c3;
   display: flex;
   justify-content: space-between;
 }
@@ -1945,6 +1953,15 @@ body {
   overflow: hidden;
 }
 
+@media only screen and (max-width: 500px) {
+  #project0-info {
+    visibility: visible;
+    opacity: 1;
+    overflow: visible;
+    width: 45%;
+  }
+}
+
 #project1-info {
   visibility: hidden;
   opacity: 0;
@@ -1960,6 +1977,15 @@ body {
   right: 0px;
   background-color: rgba(254, 90, 210, 0.6);
   overflow: hidden;
+}
+
+@media only screen and (max-width: 500px) {
+  #project1-info {
+    visibility: visible;
+    opacity: 1;
+    overflow: visible;
+    width: 45%;
+  }
 }
 
 #project2-info {
@@ -1979,6 +2005,14 @@ body {
   overflow: hidden;
 }
 
+@media only screen and (max-width: 500px) {
+  #project2-info {
+    visibility: visible;
+    opacity: 1;
+    overflow: visible;
+  }
+}
+
 #project3-info {
   visibility: hidden;
   opacity: 0;
@@ -1992,6 +2026,15 @@ body {
   position: absolute;
   top: 0px;
   background-color: rgba(248, 230, 230, 0.9);
+}
+
+@media only screen and (max-width: 500px) {
+  #project3-info {
+    visibility: visible;
+    opacity: 1;
+    overflow: visible;
+    height: 87%;
+  }
 }
 
 .icon-png {
@@ -2142,8 +2185,9 @@ body {
 .tabs {
   position: relative;
   margin: 3rem 0;
-  background: #29f3C3;
-  box-shadow: inset 0 10px 0 rgba(255, 255, 255, 0.2), inset 0 2px 2px rgba(0, 0, 0, 0.125);
+  background: #29f3c3;
+  box-shadow: inset 0 10px 0 rgba(255, 255, 255, 0.2),
+    inset 0 2px 2px rgba(0, 0, 0, 0.125);
 }
 .tabs::before {
   content: "";
@@ -2182,8 +2226,9 @@ body {
   line-height: 2.75em;
   height: 3em;
   padding: 0 1.618em;
-  background: #29f3C3;
-  box-shadow: inset 0 10px 0 rgba(255, 255, 255, 0.2), inset 0 2px 2px rgba(0, 0, 0, 0.125);
+  background: #29f3c3;
+  box-shadow: inset 0 10px 0 rgba(255, 255, 255, 0.2),
+    inset 0 2px 2px rgba(0, 0, 0, 0.125);
   border-right: 0.125rem solid #16a085;
   color: #000;
   cursor: pointer;
@@ -2233,7 +2278,8 @@ body {
   margin-bottom: 7px;
   margin-right: 7px;
   background-color: #bdf7e4;
-  box-shadow: inset 0 10px 0 rgba(255, 255, 255, 0.2), inset 0 2px 2px rgba(0, 0, 0, 0.125);
+  box-shadow: inset 0 10px 0 rgba(255, 255, 255, 0.2),
+    inset 0 2px 2px rgba(0, 0, 0, 0.125);
   color: #2c3e50;
   border-radius: 5rem;
   display: flex;
@@ -2261,7 +2307,8 @@ body {
   padding: 0px;
   border-radius: 30px;
   margin: 20px auto;
-  box-shadow: inset 0 10px 0 rgba(255, 255, 255, 0.2), inset 0 2px 2px rgba(0, 0, 0, 0.125);
+  box-shadow: inset 0 10px 0 rgba(255, 255, 255, 0.2),
+    inset 0 2px 2px rgba(0, 0, 0, 0.125);
   position: relative;
 }
 
@@ -2285,7 +2332,8 @@ body {
   border-radius: 50px 5px 5px 50px;
   background-color: #bdf7e4;
   position: relative;
-  box-shadow: inset 0 10px 0 rgba(255, 255, 255, 0.2), inset 0 2px 2px rgba(0, 0, 0, 0.125);
+  box-shadow: inset 0 10px 0 rgba(255, 255, 255, 0.2),
+    inset 0 2px 2px rgba(0, 0, 0, 0.125);
   cursor: pointer;
   margin: 0 0px;
 }
@@ -2301,7 +2349,8 @@ body {
   border-radius: 50px 5px 5px 50px;
   position: relative;
   background-color: #bdf7e4;
-  box-shadow: inset 0 10px 0 rgba(255, 255, 255, 0.2), inset 0 2px 2px rgba(0, 0, 0, 0.125);
+  box-shadow: inset 0 10px 0 rgba(255, 255, 255, 0.2),
+    inset 0 2px 2px rgba(0, 0, 0, 0.125);
   cursor: pointer;
   margin: 0 0px;
 }
@@ -2317,7 +2366,8 @@ body {
   border-radius: 50px 5px 5px 50px;
   background-color: #bdf7e4;
   position: relative;
-  box-shadow: inset 0 10px 0 rgba(255, 255, 255, 0.2), inset 0 2px 2px rgba(0, 0, 0, 0.125);
+  box-shadow: inset 0 10px 0 rgba(255, 255, 255, 0.2),
+    inset 0 2px 2px rgba(0, 0, 0, 0.125);
   cursor: pointer;
   margin: 0 0px;
 }
